Refactor backend with SOLID principles and modern Java 21 features
- Extract IGeoService + GeoServiceImpl (Haversine) from IProfileService (ISP/SRP)
- Extract PasswordEncoder interface + PBKDF2WithHmacSHA256 impl, replacing
  SHA-256 password hashing; legacy SHA-256 hashes still verified for migration
- Extract GenderPreferenceFilter strategy from DiscoveryServiceImpl (OCP/SRP)
- Extract ProfileUpdater bean from ProfileServiceImpl, isolating field-mapping
  logic from persistence lifecycle (SRP)
- Add Coordinates record as a typed value object for lat/lon pairs
- Move interest filtering from in-memory Java stream to JPQL EXISTS subquery
- Add @RunOnVirtualThread to all REST proxy classes and ImageResource
- Replace Collectors.toList() with Stream.toList() throughout
- Use switch expressions for SwipeDirection and direction string matching
- Use String.isBlank() over isEmpty() consistently