@@ -1,9 +1,12 @@
 package com.dating.service.impl;
 
-import com.dating.dto.UserDtos.*;
+import com.dating.dto.UserDtos.LastMessageDto;
+import com.dating.dto.UserDtos.MatchResponse;
+import com.dating.dto.UserDtos.ProfileResponse;
 import com.dating.entity.ChatMessageEntity;
 import com.dating.entity.Match;
 import com.dating.entity.UserProfile;
+import com.dating.service.IGeoService;
 import com.dating.service.IMatchService;
 import com.dating.service.IProfileService;
 import jakarta.enterprise.context.ApplicationScoped;
@@ -11,41 +14,19 @@ import jakarta.inject.Inject;
 import jakarta.transaction.Transactional;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class MatchServiceImpl implements IMatchService {
 
-    @Inject
-    IProfileService profileService;
+    @Inject IProfileService profileService;
+    @Inject IGeoService geoService;
 
     @Override
     public List<MatchResponse> getMatches(UUID userId) {
         UserProfile me = profileService.getById(userId);
-        List<Match> matches = Match.findByUserId(userId);
-
-        return matches.stream().map(m -> {
-            UserProfile other = m.getOtherUser(userId);
-            ChatMessageEntity lastMsg = ChatMessageEntity.findLastByMatchId(m.id);
-            long unreadCount = ChatMessageEntity.countUnread(m.id, userId);
-
-            LastMessageDto lastMessageDto = null;
-            if (lastMsg != null) {
-                lastMessageDto = new LastMessageDto(
-                        lastMsg.content, lastMsg.sentAt.toString(),
-                        lastMsg.sender.id.equals(userId)
-                );
-            }
-
-            double distance = profileService.calculateDistance(me, other);
-            var profile = new ProfileResponse(
-                    other.id, other.displayName, other.getAge(), other.bio,
-                    other.gender, other.photoUrls, other.interests,
-                    other.city, Math.round(distance * 10.0) / 10.0
-            );
-
-            return new MatchResponse(m.id, profile, m.matchedAt.toString(), lastMessageDto, unreadCount);
-        }).collect(Collectors.toList());
+        return Match.findByUserId(userId).stream()
+                .map(m -> toMatchResponse(m, userId, me))
+                .toList();
     }
 
     @Override
@@ -58,5 +39,24 @@ public class MatchServiceImpl implements IMatchService {
         }
         match.active = false;
         match.persist();
+    }
+
+    private MatchResponse toMatchResponse(Match m, UUID userId, UserProfile me) {
+        UserProfile other = m.getOtherUser(userId);
+        ChatMessageEntity lastMsg = ChatMessageEntity.findLastByMatchId(m.id);
+        long unreadCount = ChatMessageEntity.countUnread(m.id, userId);
+
+        LastMessageDto lastMessageDto = lastMsg == null ? null : new LastMessageDto(
+                lastMsg.content, lastMsg.sentAt.toString(), lastMsg.sender.id.equals(userId)
+        );
+
+        double distance = geoService.calculateDistance(me, other);
+        var profile = new ProfileResponse(
+                other.id, other.displayName, other.getAge(), other.bio,
+                other.gender, other.photoUrls, other.interests,
+                other.city, Math.round(distance * 10.0) / 10.0
+        );
+
+        return new MatchResponse(m.id, profile, m.matchedAt.toString(), lastMessageDto, unreadCount);
     }
 }
